--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body{
 }
 
 .container-fluid{
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 h1{
@@ -41,17 +41,20 @@ h1{
 }
 
 .title-image{
-    width: 60%;
-    transform: rotate(25deg);
-    margin-left: 15%;
+  width: 20%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 20%;
+  margin-left: 39px;
+  margin-bottom: 25px;
 }
 
 #features{
-    padding: 7% 15%;
+    position: relative;
 }
 .feature-box{
-        text-align: center;
-        padding: 5%;
+    text-align: center;
+    padding: 5%;
 }
 h3{
     font-family: "Ubuntu";
@@ -94,4 +97,34 @@ h2{
 }
 .carousel-item{
     padding: 7% 15%;
+}
+#pricing{
+    padding: 100px;
+    text-align: center;
+}
+.pricing-column{
+    padding: 3% 2%;
+}
+#cta{
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+.call-for-action{
+    padding: 9% 3% 1% 5%;
+    margin-top: 15px;
+    font-size: 3rem;
+}
+.social-icon {
+  margin: 20px 10px;
+}
+
+@media (max-width: 1028px){
+    #title{
+        text-align: center;
+    }
+    .title-image{
+        position: static;
+        transform: rotate(0);
+    }
 }
